fix: 修改包名称

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generator-my-test-2022",
+  "name": "generator-xl-vue",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
